# wcgi-access-counter

./: .gitignore  Cargo.toml  README.md  wapm.toml
.github/workflows/: ci.yml  deploy.yml
frontend/: index.html  index_en.html
src/: counter.rs  main.rs
