[package]
name = "wcgi-access-counter"
authors = ["Syuparn <s.hello.spagetti@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Syuparn/wcgi-access-counter"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Syuparn/wcgi-access-counter.git"
rust-version = "1.64.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgi = "0.6.0"

[dev-dependencies]
tempfile = "3.5.0"
